--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set PORT=8081 && nodemon ./index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
